add Vectorized version to parse stations